Some fixes to user dashboard as well as modal jump fix; see dashboard.css for comment in code

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -35,6 +35,11 @@ body {
 	box-shadow: 0px 8px 25px -3px rgba(0,0,0,0.75);
 }
 
+/*Prevents the modal from killing the scrollbar once it is open*/
+.modal-open {
+    overflow-y: scroll;
+}
+
 #description_holder {
 	display: inline-block;
 	position: fixed;
